crates/lang/macro/tests/ui/trait_def/fail/invalid_selector_1.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait InvalidSelector {
    #[ink(message, selector = true)]
    fn invalid_selector(&self);
}

fn main() {}
