crates/lang/macro/tests/ui/trait_def/fail/invalid_selector_1.stderr
error: expecteded 4-digit hexcode for `selector` argument, e.g. #[ink(selector = 0xC0FEBABE]
 --> $DIR/invalid_selector_1.rs:5:20
  |
5 |     #[ink(message, selector = true)]
  |                    ^^^^^^^^^^^^^^^
